--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "mongodb": "^6.18.0",
-    "next": "15.3.3",
+    "next": "^15.4.5",
     "openai": "^5.2.0",
     "puppeteer": "^24.10.0",
     "react": "^19.0.0",
