--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@vercel/analytics": "^1.5.0",
     "mongodb": "^6.18.0",
     "next": "^15.4.5",
     "openai": "^5.2.0",
