--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "@vercel/analytics": "^1.5.0",
+    "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "next": "^15.4.5",
     "openai": "^5.2.0",
